Hoàn Thành form Trang chủ

--- a/QuanLiDiemSinhVien/frmMain.resx
+++ b/QuanLiDiemSinhVien/frmMain.resx
@@ -120,6 +120,151 @@
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>129, 17</value>
   </metadata>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>244, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB8
+        HwAAAk1TRnQBSQFMAgEBBgEAASgBAAEoAQABKAEAASgBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABoAMAAVADAAEBAQABCAYAATIYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/zUAAf8B9wERAQABEwG8
+        Af96AAH/Ae8BEwESAQcB/xcAAf8BBwEPBQAB7XkAAf8BbQQAARIB8xUAAfIBFAgAAfJtAAH0Ae8G7AHx
+        AgAB8gYAAQ4B7wH/EQAB9AHsCgAB7WsAAf8B7wkAAfQBAAG8AgABDgETBAAB7A8AAf8B9wEOCwAB62sA
+        AQcKAAH0AQAB8AIAAQ4B/wHvAQ4DAAHyDAAB/wG8ARANAAHragAB/wEPAgABDgbsAfACAAHxAwAB/wEA
+        AfMBEAIAARQB/woAAf8B7A8AAREG7AGSAfAB/2EAAfIDAAHyCQAB8wMAAf8CAAG8AwABBwoAAbwZAAES
+        Af9gAAHxAwAB/wkAAfQDAAHxAgAB/wETAgABDwH/CQABbRoAAW1gAAHxDQAB/wFDAgABFQH/AgAB8gMA
+        AZIJAAEVEAAB6gbzAfABDwIAAfRfAAHxDgAB8AMAAQcDAAHsAwAB8wgAAUMQAAHrBwAB7wIAAfBfAAHx
+        BwAB8wTxAf8BAAH/AeoCAAEOAf8CAAH0AQ4CAAFtAf8HAAFDEAAB6wcAAe8CAAHwXwAB8QYAAbwFAAEP
+        Af8BAAHzAwAB7AMAAe8DAAHxBwABQxAAAesHAAHvAgAB8F8AAfEGAAHsBgAB8gIAAewDAAHzAgAB/wER
+        AgABQwH/BgABQxAAAesHAAHvAgAB8F8AAfEGAAHzAREEAAHrAf8CAAH/AQ4CAAHqAf8CAAHwAwABBwYA
+        AUMQAAHrBwAB7wIAAfBfAAHxEQABBwMAAfACAAH/AeoCAAEOAf8FAAFDEAAB6wcAAQcCAAHwXwAB8REA
+        Af8BQwIAAREB/wIAAfMDAAGSBQABQxAAAesHAAH0AUMBFAH/XwAB8RIAAfEDAAHvAwAB6wIAARIFAAFD
+        EAAB6wgAAv8BAAH/AfMB/1wAAfEGAAH/AfcH7AHtAfQBAAH/AW0CAAEOAvQB7AMAAesFAAFDEAAB6wsA
+        ARIBAAFtAf9bAAHxBgAB9wkAARICAAHzAwABFAEOBAAB8QUAAUMQAAHrCgAB/wEQAgABbQH/WgAB8QYA
+        AfcJAAESAwABkgYAARAB8AYAAUMQAAHrCwAB8gEOAgABbQH/WQAB8QYAAf8B9wfsAe0B9AMAAf8BFQMA
+        AQ4B9wH/BwABQxAAAesBAAH/CvMB7wMAAW0B/1gAAfEVAAH/Ae8B6wGSAfQJAAFDEAAB6wEAAeoPAAHs
+        WAAB8SMAAUMQAAHrAf8BDw8AARJYAAHxIwABQxAAAesBAAHyCu0B7AMAAQ8B81gAAfEGAAHzAREKAAFD
+        AfMDAAEHAQ8B7AH/CAABQxAAAesLAAH/ARMCAAEPAfNZAAHxBgAB7AwAAewDAAEOAgAB8QgAAUMQAAHr
+        CwAB6gIAAQ8B81oAAfEGAAG8DAABvAYAAfEIAAFDEAAB6woAAf8BDwEAAQ8B81sAAfEHAAHzCvEB8wcA
+        AfEIAAFDEAAB7AgAAfMB9AEAAfIBkgHzXAAB8RoAAfEIAAFDEAAB9wcAAfECAAHzXwAB8RoAAfEIAAFD
+        EAAB9AcAAe8CAAHwXwAB8QMAAf8SAAH/AwAB8QgAAUMOAAEOAbwIAAHvAgAB8F8AAfIDAAHyEgAB8gMA
+        AfIIAAFDDQABbQH0CQAB7wIAAfBfAAH/AQ8CAAEOEuwBDgIAAQ8B/wgAAUMLAAEVAfEB/woAAe8CAAHw
+        YAABBxgAAQcJAAFDCQABDgEHAf8MAAHvAgAB8GAAAf8B7xYAAe8B/wkAARUIAAHsAf8OAAHvAgAB8GIA
+        AfQB7xLsAe8B9AsAAeoGAAHqAfMPAAH/AeoCAAHygwABBwYAERUBDwIAAREB/4MAAf8BbRgAAQ4B8oUA
+        Af8B7wFDFAABDgHrAfNoAAH/AfQBGQHbAtoC2QLaAdsBGQH0Af8XAAH/AfQB8AHvAe0B6wHqARMEFQET
+        AeoB6wHtAe8B8AH0Af9lAAH/AQkB2gzZAdoBCQH/EgAB/wHxAZIBExIVARMBkgHxAf9gAAH/AdwS2QHc
+        Af8OAAH/AQcBEhgVARIBBwH/LwABvBqLAf8SAAEZAdoU2QHaARkMAAH0AW0cFQFtAfQVAAH0AfcSkQH3
+        Af8DAAEJGooB/xAAAf8B3BjZAdwB/woAAfEeFQHxFQABBwFrEwYB8QMAAQkaigH/DwAB/wHbGtkB2wH/
+        CQAB/wwVARQBbQIVAW0BFAwVAf8VAAEHAWsTgQHzAwABCQOKF5AB9AP/CwAB/wHbHNkB2wH/CQAB6woV
+        ARQBBwG8AhUB8AEHARQKFQHrFgABBwFrE4EB8wMAAQkCigGLAfEa9AsAAdwe2QHcCQABBwoVAe8B9AHw
+        AhUB8QH0Ae8KFQEHFgABBwFrA4EBugKBAboIuwG6A4EB8wMAAQkCigGLAfEa9AoAARkH2QHbBBkB3AbZ
+        AdsEGQHhB9kBGQgAAfQJFQHsAfQB/wHsAhUB7AH/AfQB7AkVAfQWAAEHAWsCgQGzAf8BswGBAfQJ/wG6
+        AoEB8wMAAQkCigGLAfEa9AkAAf8B2gfZAeEE/wEZBtkB2wT/AeIH2QHaAf8IAAEHBxUBEwHzAv8B8gIU
+        AfMC/wHzARMHFQEHFwABBwFrA4EBkAOBCZADgQHzAwABCQKKAYsB8Rr0CQAB3AjZAeEE/wEZBtkB2wT/
+        AeII2QHcCQAB8gH3ARIEFQHvBP8CBwT/Ae8EFQESAfcB8gwAAf8BvAFECR4BEQFrE4EB8wEAAQcBtwGT
+        AmgBbgKTDpQE9AG8BvQIAAH/CdkB4QT/ARkG2QHbBP8B4gnZAf8KAAH/AfMBBwHrAeoB9AT/AhoE/wH0
+        AeoB6wEHAfMB/w4AAbwBHgFFCW4BbAFrA4EBswKBAZAIugG0A4EB8wEAAUYBFwNvERcE9AHsAesBBwT0
+        CAABCQnZAeEE/wEZBtkB2wT/AeIJ2QEJDgAB/wH0Av8B9gQaAfYC/wH0Af8SAAFEAUUJ4QEJAZABawKB
+        AbMB/wGzAYEK/wG6AoEB8wEAAUYBbwP0ARYB8wEXARYB8gG9AZQBFwFvAfMBlAG3AhcB8wFvARcE9AHs
+        AuoB7AHxAvQHAAH/AdoJ2QHhBP8BGQbZAdsE/wHiCdkB2gH/DwAB9AEbAhoCmgIaARsB9BQAAQEBSwnh
+        AQkBkAFrA4EBswKBAZAIugG0A4EB8wEAAUYBbwH0AxcBGgG9AfMBFgGUAfIBFgK9AZQCtwEWAfMBbwEX
+        BPQB7ALqAXMBWQL0BwAB9ArZAeEE/wEZBtkB2wT/AeIK2QH0DwAB/wEaAZoDGgKaARoB/xQAAW4BJAGS
+        CAkBuwGQAWsTgQHzAQABRgFvAfQCvQEXAW8B9AG9AhcB9AHyAfQBFgGUAfEB9AHyAfQBbwEXBPQB7AFu
+        AVMCWQGaAfQHAAEZCtkB4QT/AfQG2QHhBP8B4grZARkPAAH/CBoB/xQAAfQBJAEBCR4BEQFrA4EBkAOB
+        CZADgQHzAQABRgFvAfQClAEXAW8B9AHyAhcBvQHxAfMBFwGUAfQBtwHzAfQBbwEXBPQBmQJTA1kB8wcA
+        AdsK2QHhBf8B4QTZAdsF/wHiCtkB2w4AAf8JGgEbAf8RAAH/AhsBGgFFCSQBFQFrAoEBswH/AbMBgQH0
+        Cf8BugKBAfMBAAFGAW8B9AJvARcB8gGUAfEBlAEXARYB9AGUARcBlAH0ARcBlAH0AW8BFwT0AfMDUwJZ
+        AZoHAAHaBtkB2wHhAdoB2QHhBv8BGQHhAdwBGQb/AeIB2QHaAeEB2gbZAdoNAAH/ARsKGgEbEAAB8wFG
+        DCYBJQFEAWsDgQG6AoEKugOBAfMBAAFGARcB8wL0ARYBGgEXAW8BGgIXAfIBbwEXApQCFwEaAW8BFwX0
+        AZoDUwJZAfQGAAHaBtkD/wLaEP8B2wHaAfQC/wbZAdoNAAHzDBoB9A4AAf8BRgEmAZML7wEcAWwBaxOB
+        AfMBAAFGFRcG9ANTAlkBegH/BQAH2QEZA/8C2g7/AdsB2gH0Av8BGQfZBgAB/wH0Af8DAAH/DhoB/w0A
+        ARsBJgGTDOEBCQGQAWsTgQHzAQAB8gEbAe8CbQGuAZMBtg69BvQBGgNTAlkBGwUACNkBGQP/AtoM/wHb
+        AdoB9AL/ARkI2QYAAZoBWQEbAwAB8w4aAfQNAAEbASYBkwzhAQkBkAFrAoEBkAH/AZABgQHzCf8BswKB
+        AfMDAAEJAooBiwHxFvQBdQJTAlkBegH/BAAB2gjZARkD/wLaCv8B2wHaAfQC/wEZCNkB2gYAAZoBWQEb
+        AQAB/wEbEBoB8wwAAf8BRwEmAW4L7QHsAWwBawKBAZABuwGQAYEBuwgJAbsBkAKBAfMDAAEJAooBiwHx
+        FvQBGwNTAlkBGgQAAdoJ2QEZA/8C2gj/AdwB2gH0Av8BGQnZAdoGAAGaAVkBGwEAARsBmg8aAZoBGgH0
+        DAAB8wFHDCYBJQFEAWsTgQHzAwABCQKKAYsB8Rf0AZoCUwNZAfYDAAHbCtkBGQP/AtoG/wHcAdoB9AL/
+        ARkK2QHbBgABmgFZARsB/wEaARwBmQ4aAZMBmgEaDQAB/wHzAhoBTAklAUoBaxOBAfMDAAEJAooBiwHx
+        F/QB8wNTAlkBmgMAARkL2QEZA/8C2gT/AeEB2gH0Av8BGQvZARkGAAGaAVkBGwH/ARoBcwGTDhoBcwGT
+        ARoPAAH0ASsLLAErDEwBmQX0Af8EAAEJAooBiwHxAfQB8xHyAfME9AGaA1MCWQH0AgAB9AzZARkD/wHa
+        AdsC/wHhAdoB9AL/ARkM2QH0BgABmgFZARsBAAH0Ae0Bbg4aARIBkwH0DwABdAEsAQgW4QEZCwABCQKK
+        AYsB8Rn0AXUCUwJZAXoB/wEAAf8B2gzZARkD/wHaAdsB4QHaAfQC/wEZDNkB2gH/BgABmgFZARsCAAEH
+        ARQBmQwaAW4BRAHwEAABKwFSF+EBGQsAAQkCigGLAfEZ9AEaA1MCWQEaAgABCQ3ZARkD/wLaAfQC/wEZ
+        DdkBCQcAARoBWQEbAgAB8AFEARIBkwoaAW4CRAHyEAACTQEJF+ELAAEJAooBiwHxAfQB8w3xAfMK9AGa
+        AlMDWQH/AQAB/w7ZARkD/wH0Av8BGQ7ZAf8HAAH/AZoB/wIAAfMCFAJEAW0BcwHtAm0B7QGZARoBcwFE
+        AhQB8xAAARoBLAErFkwBUgEbCgABCQKKAYsB8Rr0Af8DUwJZARoCAAHcDtkBGQT/ARkO2QHcCAABGgFZ
+        ARsCAAHyEBQB8RAAAf8BGgFTFywBGgoAAQkCigGLAfEa9AEAARoDUwF1AeMCAAH/AdoO2QEZAv8BGQ7Z
+        AdoB/wgAARoBWQH0AgAB8hAUAfENAAH/AbsYuAH0DQABCQKKAYsB8QL0DvMK9AEAAf8BUwFNAuMBFgMA
+        ARkP2QLhD9kBGQoAARoDAAHyEBQB8QwAAf8BugG4F9oB2wH/DQABCQKKAYsB8QL0DfME9AbzAfQCAAEb
+        Am8B4wEbBAAB3B7ZAdwLAAEaAwAB8RAUAfAMAAH0AbgB2hfhARkOAAEJAooBiwHxE/QB8gTxAfMB/wMA
+        Af8BGwH0BQAB/wHbHNkB2wH/CwABGgH0AQcB6xIUAesBBwH0Af8IAAHzAbgB6BfhARkOAAEJAooBiwHx
+        E/QB8gPxAfMOAAH/Adsa2QHbAf8JAAH/AfMB7wETBBUQFAQVAW0BBwHzAf8FAAH/AbgBuQG7FgkB8g4A
+        Af8C9AHzAfEB9AHzB/IB8wn0AfIC8QHzEAAB/wHcGNkB3AH/CgAB/wHzAe8B6gYVDBQGFQFtAQcB8wH/
+        BgABCQHZGLgB9BAAAf8B8RP0AfIB8QHzEwABGQHaFNkB2gEZDwAB/wHzAQcBbQgVAhQIFQFtAQcB9AH/
+        CgAB8wHcFtsB3AH/EAAB/wHxE/QB8gHzFQAB/wHcEtkB3AH/EwAB/wH0AQcBbQwVAW0BBwH0Af83AAH/
+        AfEB8xL0AfMB/xcAAf8BCQHaDNkB2gEJAf8YAAH/AfQBBwFtBhUBbQEHAfQB/2oAAf8B9AEZAdsC2gLZ
+        AtoB2wEZAfQB/x4AAfQBBwLrAQcB9GEAAUIBTQE+BwABPgMAASgDAAGgAwABUAMAAQEBAAEBBQABQAEG
+        FgAD/wEABv8B8AEfAv8KAAL/AfgBHwL/AcABHwL/CgAC/wHwAQ8C/wGAAQ8C/woAAf8BgAEwAQMB/wH+
+        AQABDwL/CgAB/gEAARABAwH/AfgBAAEPAv8KAAH+AQABEAEBAf8B4AEAAQ8C/woAAfwBAAEwAUAB/wHA
+        AgABBwH/CgAB/AEfAfABYAH/AcACAAEDAf8KAAH8AR8B8AFgAX8BwAIAAQMB/woAAfwBPwHwATABfwHA
+        AgABAQH/CgAB/AE/AfgBOAE/AcABAAEPAeEB/woAAfwBPAEIARgBHwHAAQABDwHhAf8KAAH8ATgBBAEc
+        AR8BwAEAAQ8B4QH/CgAB/AE4AQYBDAEPAcABAAEPAeEB/woAAfwBOAIGAQ8BwAEAAQ8B4QH/CgAB/AE/
+        Af8BBgEHAcABAAEPAeEB/woAAfwBPwH/AQMBBwHAAQABDwHhAf8KAAH8AT8B/wGDAYcBwAEAAQ8B8gE/
+        CgAB/AE4AQABgAEHAcABAAEPAf4BHwoAAfwBOAEAAcABBwHAAQABDwH8AQ8KAAH8ATgBAAHgAQ8BwAEA
+        AQ8B/gEHCgAB/AE4AQAB4AEfAcABAAEIAQABAwoAAfwBPwH/AfABfwHAAQABCAEAAQMKAAH8AT8D/wHA
+        AwABAwoAAfwBPwP/AcABAAEIAQABAwoAAfwBOAEAARwBPwHAAQABDwH+AQcKAAH8ATgBAAEcAT8BwAEA
+        AQ8B/gEPCgAB/AE4AQABHAE/AcABAAEPAfwBHwoAAfwBPAEAATwBPwHAAQABDwHyAT8KAAH8AT8B/wH8
+        AT8BwAEAAQ8B4QH/CgAB/AE/Af8B/AE/AcABAAEPAeEB/woAAfwBHwH/AfgBPwHAAQABHwHhAf8KAAH8
+        AR8B/wH4AT8BwAEAAT8B4QH/CgAB/AMAAT8BwAEAAX8B4QH/CgAB/gMAAX8BwAEBAf8B4QH/CgAB/gMA
+        AX8BwAEHAf8B4QH/CgAB/wGAAQABAQH/AcABHwH/AcEB/woABf8BwAIAAQEB/woABf8BwAIAAQMB/woA
+        Bf8B4AIAAQcB/woAAf8B+AEAAR8C/wHAAQABAwz/AeABAAEHAf8B/gMAAX8L/wGAAQABAQH/AfgDAAEf
+        Bf8BwAIAAQMC/wMAAf8B8AMAAQ8C/wGAAQABAQHAAgABAwH/AfwDAAE/AfADAAEPAv8BgAEAAQEBwAIA
+        AQMB/wH4AwABHwHwAwABDwL/AYABAAEBAcADAAF/AfADAAEPAfgDAAEfAv8BgAEAAQEBwAMAAX8B8AMA
+        AQ8B+AMAAR8C/wGAAQABAQHAAwABfwHgAwABBwH4AwABHwL/AYABAAEBAcADAAF/AcADAAEDAfwDAAE/
+        Av8BgAEAAQEBwAMAAX8BwAMAAQMB/gMAAX8B+AMAAQEEAAF/AYADAAEBAf8BgAEAAQEB/wH4AwABAQQA
+        AX8BgAMAAQEB/wH4AQABHwH/AfgDAAEBBAABfwUAAf8B/gEAAX8B/wH4AwABAQQAAX8FAAH/Af4BAAF/
+        Af8B+AMAAQEEAAF/BQAB/wH+AQABfwH/AfgDAAEBBAABfwUAAf8B/AEAAT8B/wHgAwABAQQAAX8FAAH/
+        AfgBAAE/Af8BwAMAAQEEAAE/BQAB/wH4AQABHwH/AYADAAEBBAABHwUAAfwBcAEAAQ8B/wGAAwABAQQA
+        AR8FAAH8AXABAAEPAf8BgAMAAQEBwAMAAQ8FAAH8AUABAAEHAf8BgAMAAQEBwAMAAQ8FAAH8AUABAAED
+        Af8BwAMAAQEBwAMAAQcFAAH8AgABAwH/AeADAAEBAcADAAEHBQAB/AIAAQMB/wH4AwABAwHAAwABAwUA
+        AfwBQAEAAQMB/wH4AgABAQH/AcADAAEBBQAB/AFgAQABBwH/AfgCAAEBAf8BwAMAAQEBgAMAAQEB/AFg
+        AQABBwH/AfgCAAEBAf8BwAQAAYADAAEBAfwBYAEAAQcB/wH4AwAB/wHABAABwAMAAQMB/AFgAQABBwH/
+        AfgDAAH/AcADAAFAAcADAAEDAfwBYAEAAQcB/wHAAgABBwH/AcADAAFAAeADAAEHAf4B4AEAAQcB/wGA
+        AgABBwH/AcADAAFgAfADAAEPAf4B4AEAAQcB/wGAAgABDwH/AcADAAFxAfADAAEPAf4DAAF/AYACAAEP
+        Af8BwAIAAQEB/wH4AwABHwHwAwABDwGAAgABDwH/AcACAAEDAf8B/AMAAT8B8AMAAQ8BwAIAAQcB/wH4
+        AgABBwL/AwAB/wH+AwABfwHgAgABBwH/AfgCAAEPAv8BgAEAAQEC/wHAAQABAwb/AfgCAAEPAv8B4AEA
+        AQcC/wH4AQABHwz/AfgBAAEfA/8BgQz/Cw==
+</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -290,4 +435,7 @@
         xUUVLS6q+IT85pMWdHzym/8HAXfJ4mGRk48AAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>65</value>
+  </metadata>
 </root>
